
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fz_output ;
typedef int fz_document_writer ;
typedef int fz_context ;


 int FZ_ERROR_GENERIC ;
 int * fz_new_cbz_writer_with_output (int *,int *,char const*) ;
 int * fz_new_pcl_writer_with_output (int *,int *,char const*) ;
 int * fz_new_pclm_writer_with_output (int *,int *,char const*) ;
 int * fz_new_pdf_writer_with_output (int *,int *,char const*) ;
 int * fz_new_ps_writer_with_output (int *,int *,char const*) ;
 int * fz_new_pwg_writer_with_output (int *,int *,char const*) ;
 int * fz_new_text_writer_with_output (int *,char const*,int *,char const*) ;
 int fz_strcasecmp (char const*,char*) ;
 int fz_throw (int *,int ,char*,char const*) ;

fz_document_writer *
fz_new_document_writer_with_output(fz_context *ctx, fz_output *out, const char *format, const char *options)
{
 if (!fz_strcasecmp(format, "cbz"))
  return fz_new_cbz_writer_with_output(ctx, out, options);





 if (!fz_strcasecmp(format, "pcl"))
  return fz_new_pcl_writer_with_output(ctx, out, options);
 if (!fz_strcasecmp(format, "pclm"))
  return fz_new_pclm_writer_with_output(ctx, out, options);
 if (!fz_strcasecmp(format, "ps"))
  return fz_new_ps_writer_with_output(ctx, out, options);
 if (!fz_strcasecmp(format, "pwg"))
  return fz_new_pwg_writer_with_output(ctx, out, options);

 if (!fz_strcasecmp(format, "txt") || !fz_strcasecmp(format, "text"))
  return fz_new_text_writer_with_output(ctx, "text", out, options);
 if (!fz_strcasecmp(format, "html"))
  return fz_new_text_writer_with_output(ctx, format, out, options);
 if (!fz_strcasecmp(format, "xhtml"))
  return fz_new_text_writer_with_output(ctx, format, out, options);
 if (!fz_strcasecmp(format, "stext"))
  return fz_new_text_writer_with_output(ctx, format, out, options);

 fz_throw(ctx, FZ_ERROR_GENERIC, "unknown output document format: %s", format);
}
